# ClassificationNN

./: CMakeLists.txt  README.MD
inc/cub/device/: device_reduce.cuh
inc/cub/device/dispatch/: dispatch_reduce.cuh
src/: Classification.cpp  Classification.cu  Classification.cuh  Classification.h  CudaGlobal.cuh  CudaMatrix.cu  CudaMatrix.h  Timer.h
src/Classification/: CMakeLists.txt  Classification.h
src/CudaComputation/: CMakeLists.txt  CudaGlobal.cuh  CudaMath.cu  CudaMatrix.cu  CudaMatrix.cuh  CudaMatrix.h
src/MLChart/: CMakeLists.txt  MLChart.cpp  MLChart.h  MLChart.ui  MLChartFrame.cpp  MLChartFrame.h
src/Regression/: CMakeLists.txt  Regression.cpp  Regression.h
src/Utilities/: Templates.h
